# biometric-auth-analysis

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cspell.json  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_art9_check.yml
.github/workflows/: ci.yml
biometric_auth/: __init__.py  app.py  cli.py
biometric_auth/data/: __init__.py  synthetic.py
biometric_auth/engine/: __init__.py  attack.py  bias.py  gdpr.py  metrics.py  statistics.py
biometric_auth/models/: __init__.py  config.py  results.py
biometric_auth/parsers/: __init__.py  config_parser.py  score_file.py
biometric_auth/reporters/: __init__.py  console.py  json_rep.py  pdf_rep.py
data/: README.md
data/sample_configs/: system_face_recognition.yaml  system_fingerprint.yaml  system_iris.yaml
data/synthetic/: README.md  scores_high_accuracy.csv  scores_low_accuracy.csv  scores_medium_accuracy.csv
docs/: ARCHITECTURE.md  GDPR_BIOMETRIC_REFERENCE.md  METHODOLOGY.md
findings/: key_findings.md
notebooks/: 01_data_exploration.ipynb  02_usability_analysis.ipynb  03_security_effectiveness.ipynb  04_gdpr_article9_mapping.ipynb
tests/: conftest.py  test_attack.py  test_bias.py  test_gdpr.py  test_metrics.py  test_parsers.py  test_reporters.py  test_statistics.py
