[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biometric-auth-analysis"
version = "1.0.0"
description = "Biometric authentication security evaluation with GDPR Article 9 compliance assessment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abosede Makinde", email = "Abomaabidemi27@gmail.com" }]
keywords = [
    "biometric-authentication", "gdpr-article-9", "far-frr", "fairness",
    "presentation-attack", "data-protection", "biometric-security",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "rich>=13.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "reportlab>=4.0",
    "Pillow>=10.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "types-PyYAML>=6.0",
    "notebook>=7.0",
    "ipykernel>=6.0",
]

[project.scripts]
biometric-auth = "biometric_auth.cli:cli"

[project.urls]
Repository = "https://github.com/Abosede-o-Makinde/biometric-auth-analysis"
Issues = "https://github.com/Abosede-o-Makinde/biometric-auth-analysis/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=biometric_auth --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["biometric_auth"]

[tool.coverage.run]
omit = ["tests/*", "biometric_auth/app.py"]
